--- a/.yamato/all-smoke_test.yml
+++ b/.yamato/all-smoke_test.yml
@@ -11,11 +11,11 @@ PR_Smoke_Test_2020.3:
     name: Smoke_Test PR Job - 2020.3
     dependencies:
       -  path: .yamato/smoke_test-win-dx11.yml#Smoke_Test_Win_DX11_playmode_mono_Linear_2020.3
-         rerun: on-new-revision
+         rerun: on_new_revision
       -  path: .yamato/smoke_test-win-dx11.yml#Smoke_Test_Win_DX11_editmode_mono_Linear_2020.3
-         rerun: on-new-revision
+         rerun: on_new_revision
       -  path: .yamato/smoke_test-win-dx11.yml#Smoke_Test_Win_DX11_Standalone_mono_Linear_2020.3
-         rerun: on-new-revision
+         rerun: on_new_revision
     variables:
         UTR_VERSION: "current"
         TEST_FILTER: .*
@@ -23,7 +23,7 @@ Nightly_Smoke_Test_2020.3:
     name: Nightly Smoke_Test - 2020.3
     dependencies:
       -  path: .yamato/all-smoke_test.yml#PR_Smoke_Test_2020.3
-         rerun: on-new-revision
+         rerun: on_new_revision
     variables:
         UTR_VERSION: "current"
         TEST_FILTER: .*
@@ -31,11 +31,11 @@ PR_Smoke_Test_CUSTOM-REVISION:
     name: Smoke_Test PR Job - CUSTOM-REVISION
     dependencies:
       -  path: .yamato/smoke_test-win-dx11.yml#Smoke_Test_Win_DX11_playmode_mono_Linear_CUSTOM-REVISION
-         rerun: always
+         rerun: on_new_revision
       -  path: .yamato/smoke_test-win-dx11.yml#Smoke_Test_Win_DX11_editmode_mono_Linear_CUSTOM-REVISION
-         rerun: always
+         rerun: on_new_revision
       -  path: .yamato/smoke_test-win-dx11.yml#Smoke_Test_Win_DX11_Standalone_mono_Linear_CUSTOM-REVISION
-         rerun: always
+         rerun: on_new_revision
     variables:
         CUSTOM_REVISION: custom_revision_not_set
         UTR_VERSION: "current"
@@ -44,7 +44,7 @@ Nightly_Smoke_Test_CUSTOM-REVISION:
     name: Nightly Smoke_Test - CUSTOM-REVISION
     dependencies:
       -  path: .yamato/all-smoke_test.yml#PR_Smoke_Test_CUSTOM-REVISION
-         rerun: always
+         rerun: on_new_revision
     variables:
         CUSTOM_REVISION: custom_revision_not_set
         UTR_VERSION: "current"
