--- a/.yamato/vfx_urp-linux-vulkan.yml
+++ b/.yamato/vfx_urp-linux-vulkan.yml
@@ -28,7 +28,7 @@ VFX_URP_Linux_Vulkan_Standalone_mono_Linear_2020.3:
               -  "TestProjects/VisualEffectGraph_URP/Logs/*.log"
     dependencies:
       -  path: .yamato/vfx_urp-linux-vulkan.yml#Build_VFX_URP_Linux_Vulkan_Standalone_mono_Linear_2020.3
-         rerun: on-new-revision
+         rerun: on_new_revision
 Build_VFX_URP_Linux_Vulkan_Standalone_mono_Linear_2020.3:
     name: Build VFX_URP on Linux_Vulkan_mono_Linear_Standalone_build_Player on version 2020.3
     agent:
@@ -125,7 +125,7 @@ VFX_URP_Linux_Vulkan_Standalone_cache_mono_Linear_2020.3:
               -  "TestProjects/VisualEffectGraph_URP/Logs/*.log"
     dependencies:
       -  path: .yamato/vfx_urp-linux-vulkan.yml#Build_VFX_URP_Linux_Vulkan_Standalone_cache_mono_Linear_2020.3
-         rerun: on-new-revision
+         rerun: on_new_revision
 Build_VFX_URP_Linux_Vulkan_Standalone_cache_mono_Linear_2020.3:
     name: Build VFX_URP on Linux_Vulkan_mono_Linear_Standalone_cache_build_Player on version 2020.3
     agent:
@@ -175,9 +175,9 @@ VFX_URP_Linux_Vulkan_Standalone_mono_Linear_CUSTOM-REVISION:
               -  "TestProjects/VisualEffectGraph_URP/Logs/*.log"
     dependencies:
       -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:Linux
-         rerun: always
+         rerun: on_new_revision
       -  path: .yamato/vfx_urp-linux-vulkan.yml#Build_VFX_URP_Linux_Vulkan_Standalone_mono_Linear_CUSTOM-REVISION
-         rerun: always
+         rerun: on_new_revision
 Build_VFX_URP_Linux_Vulkan_Standalone_mono_Linear_CUSTOM-REVISION:
     name: Build VFX_URP on Linux_Vulkan_mono_Linear_Standalone_build_Player on version CUSTOM-REVISION
     agent:
@@ -208,7 +208,7 @@ Build_VFX_URP_Linux_Vulkan_Standalone_mono_Linear_CUSTOM-REVISION:
               -  "players*/**"
     dependencies:
       -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:Linux
-         rerun: always
+         rerun: on_new_revision
 VFX_URP_Linux_Vulkan_playmode_mono_Linear_CUSTOM-REVISION:
     name: VFX_URP on Linux_Vulkan_playmode_mono_Linear on version CUSTOM-REVISION
     agent:
@@ -236,7 +236,7 @@ VFX_URP_Linux_Vulkan_playmode_mono_Linear_CUSTOM-REVISION:
               -  "TestProjects/VisualEffectGraph_URP/Logs/*.log"
     dependencies:
       -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:Linux
-         rerun: always
+         rerun: on_new_revision
 VFX_URP_Linux_Vulkan_playmode_cache_mono_Linear_CUSTOM-REVISION:
     name: VFX_URP on Linux_Vulkan_playmode_cache_mono_Linear on version CUSTOM-REVISION
     agent:
@@ -264,7 +264,7 @@ VFX_URP_Linux_Vulkan_playmode_cache_mono_Linear_CUSTOM-REVISION:
               -  "TestProjects/VisualEffectGraph_URP/Logs/*.log"
     dependencies:
       -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:Linux
-         rerun: always
+         rerun: on_new_revision
 VFX_URP_Linux_Vulkan_Standalone_cache_mono_Linear_CUSTOM-REVISION:
     name: VFX_URP on Linux_Vulkan_Standalone_cache_mono_Linear on version CUSTOM-REVISION
     agent:
@@ -287,9 +287,9 @@ VFX_URP_Linux_Vulkan_Standalone_cache_mono_Linear_CUSTOM-REVISION:
               -  "TestProjects/VisualEffectGraph_URP/Logs/*.log"
     dependencies:
       -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:Linux
-         rerun: always
+         rerun: on_new_revision
       -  path: .yamato/vfx_urp-linux-vulkan.yml#Build_VFX_URP_Linux_Vulkan_Standalone_cache_mono_Linear_CUSTOM-REVISION
-         rerun: always
+         rerun: on_new_revision
 Build_VFX_URP_Linux_Vulkan_Standalone_cache_mono_Linear_CUSTOM-REVISION:
     name: Build VFX_URP on Linux_Vulkan_mono_Linear_Standalone_cache_build_Player on version CUSTOM-REVISION
     agent:
@@ -320,4 +320,4 @@ Build_VFX_URP_Linux_Vulkan_Standalone_cache_mono_Linear_CUSTOM-REVISION:
               -  "players*/**"
     dependencies:
       -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:Linux
-         rerun: always
+         rerun: on_new_revision
