--- a/.yamato/all-universal_split.yml
+++ b/.yamato/all-universal_split.yml
@@ -54,18 +54,18 @@ Nightly_Universal_Split_trunk:
          rerun: on-new-revision
       -  path: .yamato/all-urp_terrain.yml#Nightly_URP_Terrain_trunk
          rerun: on-new-revision
-      -  path: .yamato/all-universal_stereo.yml#Nightly_Universal_Stereo_trunk
-         rerun: on-new-revision
-      -  path: .yamato/all-universal_hybrid.yml#Nightly_Universal_Hybrid_trunk
-         rerun: on-new-revision
-      -  path: .yamato/all-vfx_urp.yml#Nightly_VFX_URP_trunk
-         rerun: on-new-revision
-      -  path: .yamato/all-shadergraph.yml#Nightly_ShaderGraph_trunk
-         rerun: on-new-revision
-      -  path: .yamato/all-smoke_test.yml#Nightly_Smoke_Test_trunk
-         rerun: on-new-revision
-      -  path: .yamato/all-urpupdate.yml#Nightly_URPUpdate_trunk
-         rerun: on-new-revision
+      # -  path: .yamato/all-universal_stereo.yml#Nightly_Universal_Stereo_trunk
+      #    rerun: on-new-revision
+      # -  path: .yamato/all-universal_hybrid.yml#Nightly_Universal_Hybrid_trunk
+      #    rerun: on-new-revision
+      # -  path: .yamato/all-vfx_urp.yml#Nightly_VFX_URP_trunk
+      #    rerun: on-new-revision
+      # -  path: .yamato/all-shadergraph.yml#Nightly_ShaderGraph_trunk
+      #    rerun: on-new-revision
+      # -  path: .yamato/all-smoke_test.yml#Nightly_Smoke_Test_trunk
+      #    rerun: on-new-revision
+      # -  path: .yamato/all-urpupdate.yml#Nightly_URPUpdate_trunk
+      #    rerun: on-new-revision
     variables:
         UTR_VERSION: "current"
         TEST_FILTER: .*
