--- a/com.unity.visualeffectgraph/Shaders/VFXInit.template
+++ b/com.unity.visualeffectgraph/Shaders/VFXInit.template
@@ -116,7 +116,7 @@ void CSMain(uint3 groupId          : SV_GroupID,
             return;
 
         const StripData stripData = GetStripDataFromStripIndex(stripIndex, PARTICLE_PER_STRIP_COUNT);
-		InitStripAttributesWithSpawn(maxThreadId, particleIndex, attributes, stripData);
+		InitStripAttributesWithSpawn(threadCount, particleIndex, attributes, stripData);
 		// TODO Change seed to be sure we're deterministic on random with strip
 #endif
         
