Fix custom interpolator support for VFX

--- a/com.unity.render-pipelines.high-definition/Editor/Material/ShaderGraph/Templates/ShaderPass.template
+++ b/com.unity.render-pipelines.high-definition/Editor/Material/ShaderGraph/Templates/ShaderPass.template
@@ -44,6 +44,14 @@ Pass
     #ifndef HAVE_VFX_MODIFICATION
     #include "Packages/com.unity.render-pipelines.high-definition/Runtime/RenderPipeline/ShaderPass/FragInputs.hlsl"
     #else
+
+    // For VFX, redefine the custom interpolator preprocessor so that it can be checked against the procedurally created FragInputs.
+    // TODO: VFX should also use the substruct method to procedurally append to VFX, or fully make use of custom interpolators.
+    #ifdef  USE_CUSTOMINTERP_SUBSTRUCT
+    #undef  USE_CUSTOMINTERP_SUBSTRUCT
+    #define USE_CUSTOMINTERP_SUBSTRUCT 1
+    #endif//USE_CUSTOMINTERP_SUBSTRUCT
+
     // For now, move the full struct splice to this point (contains FragInputs).
     $splice(PassStructs)
     #endif
