Fix for material alpha clip when shader alpha clip disabled

--- a/com.unity.render-pipelines.universal/Editor/ShaderGraph/Templates/ShaderPass.template
+++ b/com.unity.render-pipelines.universal/Editor/ShaderGraph/Templates/ShaderPass.template
@@ -31,8 +31,8 @@ $splice(GraphKeywords)
 $SurfaceType.Transparent:           // UBER SHADER NOW:  #define _SURFACE_TYPE_TRANSPARENT 1
 $AlphaClip:                         // UBER SHADER NOW:  #define _AlphaClip 1
 $Normal:                            #define _NORMALMAP 1
-$BlendMode.Add:                     #define _BLENDMODE_ADD 1
-$BlendMode.Premultiply:             #define _ALPHAPREMULTIPLY_ON 1
+$BlendMode.Add:                     // UBER SHADER NOW:  #define _BLENDMODE_ADD 1
+$BlendMode.Premultiply:             // UBER SHADER NOW:  #define _ALPHAPREMULTIPLY_ON 1
 $NormalDropOffTS:                   #define _NORMAL_DROPOFF_TS 1
 $NormalDropOffOS:                   #define _NORMAL_DROPOFF_OS 1
 $NormalDropOffWS: #define _NORMAL_DROPOFF_WS 1
