--- a/com.unity.render-pipelines.universal/Editor/Decal/DecalPass.template
+++ b/com.unity.render-pipelines.universal/Editor/Decal/DecalPass.template
@@ -26,7 +26,6 @@ Pass
 
     #include "Packages/com.unity.render-pipelines.core/ShaderLibrary/Common.hlsl"
     #include "Packages/com.unity.render-pipelines.core/ShaderLibrary/Texture.hlsl"
-    #include "Packages/com.unity.render-pipelines.universal/Editor/ShaderGraph/Includes/ShaderPass.hlsl"
 
     // Defines
     $Attributes.normalOS:               #define ATTRIBUTES_NEED_NORMAL
@@ -46,6 +45,8 @@ Pass
     $Varyings.texCoord3:                #define VARYINGS_NEED_TEXCOORD3
     $Varyings.color:                    #define VARYINGS_NEED_COLOR
     $Varyings.fogFactorAndVertexLight:  #define VARYINGS_NEED_FOG_AND_VERTEX_LIGHT
+    $Varyings.sh:                       #define VARYINGS_NEED_SH
+    $Varyings.lightmapUV:               #define VARYINGS_NEED_LIGHTMAP_UV
     $Varyings.shadowCoord:              #define VARYINGS_NEED_SHADOW_COORD
     
     $features.graphVertex:                  #define HAVE_MESH_MODIFICATION
@@ -135,9 +136,12 @@ Pass
             float2 scale = float2(normalToWorld[3][0], normalToWorld[3][1]);
             float2 offset = float2(normalToWorld[3][2], normalToWorld[3][3]);
             $Varyings.texCoord0: input.texCoord0.xy = input.texCoord0.xy * scale + offset;
+            $Varyings.texCoord1: input.texCoord1.xy = input.texCoord1.xy * scale + offset;
+            $Varyings.texCoord2: input.texCoord2.xy = input.texCoord2.xy * scale + offset;
+            $Varyings.texCoord3: input.texCoord3.xy = input.texCoord3.xy * scale + offset;
         #else
             #ifdef LOD_FADE_CROSSFADE // enable dithering LOD transition if user select CrossFade transition in LOD group
-                LODDitheringTransition(ComputeFadeMaskSeed(V, positionSS), unity_LODFade);
+                LODDitheringTransition(ComputeFadeMaskSeed(V, positionSS), unity_LODFade.x);
             #endif
 
             real fadeFactor = real(1.0);
