--- a/.yamato/all-urp_2d.yml
+++ b/.yamato/all-urp_2d.yml
@@ -54,6 +54,8 @@ Nightly_URP_2D_trunk:
          rerun: on_new_revision
       -  path: .yamato/urp_2d-linux-vulkan.yml#URP_2D_Linux_Vulkan_playmode_cache_mono_Linear_trunk
          rerun: on_new_revision
+      -  path: .yamato/urp_2d-osx_apple_silicon-metal.yml#URP_2D_OSX_Apple_Silicon_Metal_playmode_cache_mono_Linear_trunk
+         rerun: on_new_revision
     variables:
         UTR_VERSION: "current"
         TEST_FILTER: .*
@@ -104,6 +106,8 @@ Nightly_URP_2D_CUSTOM-REVISION:
       -  path: .yamato/urp_2d-win-vulkan.yml#URP_2D_Win_Vulkan_playmode_cache_mono_Linear_CUSTOM-REVISION
          rerun: on_new_revision
       -  path: .yamato/urp_2d-linux-vulkan.yml#URP_2D_Linux_Vulkan_playmode_cache_mono_Linear_CUSTOM-REVISION
+         rerun: on_new_revision
+      -  path: .yamato/urp_2d-osx_apple_silicon-metal.yml#URP_2D_OSX_Apple_Silicon_Metal_playmode_cache_mono_Linear_CUSTOM-REVISION
          rerun: on_new_revision
     variables:
         CUSTOM_REVISION: custom_revision_not_set
