--- a/.yamato/all-urp_terrain.yml
+++ b/.yamato/all-urp_terrain.yml
@@ -54,6 +54,8 @@ Nightly_URP_Terrain_trunk:
          rerun: on_new_revision
       -  path: .yamato/urp_terrain-linux-vulkan.yml#URP_Terrain_Linux_Vulkan_playmode_cache_mono_Linear_trunk
          rerun: on_new_revision
+      -  path: .yamato/urp_terrain-osx_apple_silicon-metal.yml#URP_Terrain_OSX_Apple_Silicon_Metal_playmode_cache_mono_Linear_trunk
+         rerun: on_new_revision
     variables:
         UTR_VERSION: "current"
         TEST_FILTER: .*
@@ -104,6 +106,8 @@ Nightly_URP_Terrain_CUSTOM-REVISION:
       -  path: .yamato/urp_terrain-win-vulkan.yml#URP_Terrain_Win_Vulkan_playmode_cache_mono_Linear_CUSTOM-REVISION
          rerun: on_new_revision
       -  path: .yamato/urp_terrain-linux-vulkan.yml#URP_Terrain_Linux_Vulkan_playmode_cache_mono_Linear_CUSTOM-REVISION
+         rerun: on_new_revision
+      -  path: .yamato/urp_terrain-osx_apple_silicon-metal.yml#URP_Terrain_OSX_Apple_Silicon_Metal_playmode_cache_mono_Linear_CUSTOM-REVISION
          rerun: on_new_revision
     variables:
         CUSTOM_REVISION: custom_revision_not_set
