--- a/.yamato/all-vfx_hdrp.yml
+++ b/.yamato/all-vfx_hdrp.yml
@@ -40,6 +40,8 @@ Nightly_VFX_HDRP_trunk:
          rerun: on_new_revision
       -  path: .yamato/vfx_hdrp-osx-metal.yml#VFX_HDRP_OSX_Metal_playmode_cache_mono_Linear_trunk
          rerun: on_new_revision
+      -  path: .yamato/vfx_hdrp-osx_apple_silicon-metal.yml#VFX_HDRP_OSX_Apple_Silicon_Metal_playmode_cache_mono_Linear_trunk
+         rerun: on_new_revision
     variables:
         UTR_VERSION: "current"
         TEST_FILTER: .*
@@ -74,6 +76,8 @@ Nightly_VFX_HDRP_CUSTOM-REVISION:
       -  path: .yamato/vfx_hdrp-win-dx12.yml#VFX_HDRP_Win_DX12_playmode_cache_mono_Linear_CUSTOM-REVISION
          rerun: on_new_revision
       -  path: .yamato/vfx_hdrp-osx-metal.yml#VFX_HDRP_OSX_Metal_playmode_cache_mono_Linear_CUSTOM-REVISION
+         rerun: on_new_revision
+      -  path: .yamato/vfx_hdrp-osx_apple_silicon-metal.yml#VFX_HDRP_OSX_Apple_Silicon_Metal_playmode_cache_mono_Linear_CUSTOM-REVISION
          rerun: on_new_revision
     variables:
         CUSTOM_REVISION: custom_revision_not_set
